Add endpoint for artist search
