# api.yaml
@@ -93,6 +93,33 @@ paths:
           schema:
             $ref: "#/definitions/PageableAlbums"
       x-swagger-router-controller: "Search"
+  /search/artist:
+    get:
+      tags:
+      - "search"
+      - "artist"
+      summary: "Search for an artist"
+      operationId: "searchArtist"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "q"
+        in: "query"
+        description: "The search query"
+        required: true
+        type: "string"
+      - name: "page"
+        in: "query"
+        description: "Page for pagination"
+        default: 0
+        required: false
+        type: "integer"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/PageableArtists"
+      x-swagger-router-controller: "Search"
   /me:
     get:
       tags:
@@ -298,6 +325,39 @@ definitions:
         type: "string"
     required:
     - artists
+    - id
+    - images
+    - name
+  PageableArtists:
+    type: "object"
+    properties:
+      page:
+        type: "integer"
+      elements:
+        type: "integer"
+      elementsPerPage:
+        type: "integer"
+      artists:
+        type: "array"
+        items:
+          $ref: "#/definitions/Artist"
+    required:
+    - page
+    - elements
+    - elementsPerPage
+    - artists
+  Artist:
+    type: "object"
+    properties:
+      id:
+        type: "string"
+      images:
+        type: "array"
+        items:
+          $ref: "#/definitions/Image"
+      name:
+        type: "string"
+    required:
     - id
     - images
     - name
